# rust-market-ingestion

./: Cargo.toml  docker-compose.yml
src/: binance.rs  db.rs  main.rs  models.rs
