[package]
name = "new-market-ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
postgres = { version="0.19.14", features=["with-chrono-0_4"]}
chrono = "0.4.45"
rust_decimal = { version="1.42", features=["db-postgres"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
anyhow = "1.0.102"
rustls = { version = "0.23", features = ["ring"]}
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"]}
tungstenite = { version = "0.29.0"}
tokio = { version = "1.0.0", features = ["full"]}
url = "2.5.8"
futures-util = "0.3.32"
csv = "1.4.0"
exitfailure = "0.5.1"
reqwest = { version = "0.13.4", features = ["json"]}

